--- a/src/routes/DocsPage/views/UiComponentInfo/views/Banner/Banner.scss
+++ b/src/routes/DocsPage/views/UiComponentInfo/views/Banner/Banner.scss
@@ -1,12 +1,59 @@
-@import 'style/variables';
+@import "style/variables";
 
 .Banner {
-  padding: 80px;
-  background-color: #333646;
-  height: 300px;
+    position: relative;
+    height: 300px;
+    overflow: hidden;
 
-  &__title {
-    font-size: 96px;
-    color: $white;
-  }
+    &__frame { 
+        max-width: 1080px;
+        width: 1080px;
+        padding: 81px;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    &__title {
+        position: relative;
+        z-index: 2;
+        font-size: $font-size-80;
+        font-weight: $font-weight-lg;
+        line-height: $line-height-96;
+        color: $white;
+        margin-bottom: 12px;
+    }
+
+    &__description {
+        position: relative;
+        z-index: 2;
+        color: $white;
+        font-size: $font-size-14;
+        font-weight: 300;
+        line-height: $line-height-18;
+    }
+
+    &__background {
+        width: 100%;
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        left: 0;
+    }
+
+    &__picture { 
+        position: absolute;
+        z-index: 0;
+        right: 0;
+        top: 0;
+        width: 36.4583333333vw;
+        height: 15.625vw;
+        overflow: visible;
+
+        &-img { 
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
 }
