--- a/src/routes/IndexPage/views/InteractiveSection/views/ComponentNavigation/ComponentNavigation.scss
+++ b/src/routes/IndexPage/views/InteractiveSection/views/ComponentNavigation/ComponentNavigation.scss
@@ -1,6 +1,6 @@
 @import "style/variables";
 
-.ComponentPicker {
+.ComponentNavigation {
     transform: translateY(44px) translateX(24px);
 
     @media (max-width: $tablet-width) {
